--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wait-queue-as-promise",
+  "name": "@mobilestock/wait-queue-as-promise",
   "version": "1.0.0",
   "description": "Wait queue as a promise",
   "main": "index.js",
