--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,10 @@
     "@types/node": "^18.11.9",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.3"
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@mobilestock"
