--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@mobilestock/wait-queue-as-promise",
   "version": "1.0.1",
   "description": "Wait queue as a promise",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "webpack"
@@ -28,6 +28,7 @@
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
