--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "target": "es5",
     "moduleResolution": "node",
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "allowJs": true,
+    "noEmit": false
   }
 }
